Fixed warning for Long type